# examples

./: .gitignore  README.md  bruteforce_practice.py  cyclc_shift.py  del_elemet_from_massive.py  list_comprehensions.py  list_intersection.py  pyproject.toml  recursion_practice.py  rever_str.py  sorting_practice.py  work_with_lists.py
db/: alchemy.py  docker-compose.yml
tests/: test_practice.py
