[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Makarov Valentine <octopulus96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
